Update print statement to say 'Goodbye World'

--- a/index.html
+++ b/index.html
@@ -478,9 +478,9 @@
         code:"ISL 101",
         section:"F 3",
         attempted:2.000,
-        grade:"c",
+        grade:"C",
         details:{
-          midterm:"-",
+          midterm:"",
           campus:"M",
           earned:2.000,
           gpaHours:2.000,
@@ -708,3 +708,4 @@
   </script>
 </body>
 </html>
+
